# C-lery

./: .generator.vala.swp  .generator.vala.un~  .gitignore  .main.vala.un~  .meson.build.un~  .parser.vala.un~  .token.vala.un~  .tokenise.vala.un~  Makefile  generator.vala  lexer.vala  lexerise.vala  logger.vala  main.vala  meson.build  normalise.vala  parser.vala  t.out  test.lery  testHello_World  token.vala  tokenise.vala
POC/: parser.vala
doc/: .grammar.bnf.swp  .grammar.txt.un~  grammar.bnf
lib/: types.h
old_POC/: README.md  lexer.vala  meson.build  token.vala
src/: .Tokens.vala.swp  .main.vala.swp  Tokens.vala  logger.vala  main.vala
std/: std.lery
test/: .return_test.lery.un~  Hello_World  Hello_World.c  Hello_World.lery  Hello_World.lery.S  codGen_tst.lery  codGen_tst.lery.c  std.lb  std.lery  t.lery  test.lery
tests/: Hello_World.lery  return.lery
